[package]
name = "ferrugem"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
toml = "0.8.16"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1.39.1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
