[package]
name = "ferrugem"
version = "0.1.2"
edition = "2021"
authors = ["Erick Cestari <erickcestari03@gmail.com>"]
description = "A lightweight and efficient load balancer implemented in Rust."
license = "MIT"
repository = "https://github.com/erickcestari/ferrugem"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.1", features = ["rt-multi-thread"]}
reqwest = { version = "0.12.5", features = ["stream"] }
toml = "0.8.16"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1.39.1", features = ["rt-multi-thread"] }
reqwest = { version = "0.12.5", features = ["json"] }
